--- a/css/main.css
+++ b/css/main.css
@@ -81,56 +81,8 @@
 
 .questionsContainer {
     width: 100%;
-    
     display: flex;
     padding: 10px;
-}
-
-.question {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    padding: 15px;
-    font-size: 26px;
-    color:white;
-    gap: 5px;
-}
-
-.questionHeader {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #2D2D2D;
-    width: 100%;
-    padding: 15px;
-    font-size: 26px;
-    cursor: pointer;
-}
-
-.questionAnswer {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    background-color: #2D2D2D;
-    width: 100%;
-    padding: 15px;
-    font-size: 26px;
-}
-
-.questionHeader:hover {
-    background-color: #4d4b4b;
-}
-
-.plus {
-    /* writing-mode: sideways-rl; */
-    font-size: 50px;
-    transform: 0;
-}
-
-.x {
-    font-size: 50px;
-    transform: rotate(45deg);
 }
 
 .questionsContainer {
@@ -138,8 +90,60 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    gap: 3px;
+    margin-top: 20px;
 }
 
-.margin {
-    margin-top: 50px;
+.restartContainer {
+    margin-top: 30px;
+}
+
+.acordeon {
+    background-color: #2D2D2D;
+    padding: 1rem;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    cursor: pointer;
+    display: flex;
+    padding: 15px;
+    font-size: 26px;
+    color: white;
+    
+}
+
+.acordeon:hover {
+    background-color: #4d4b4b;
+}
+
+.acordeon::after {
+    font-family: "bootstrap-icons";
+    content: "\F4FE";
+    font-size: 50px;
+}
+
+.desc {
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.8s ease;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    background-color: rgb(45, 45, 45);
+    width: 100%;
+    font-size: 26px;
+    text-align:left;
+}
+
+.active::after {
+    font-family: "bootstrap-icons";
+    content: "\F4FE";
+    font-size: 50px;
+    transform: rotate(45deg);
+}
+
+.desc p{
+    padding: 15px;
+    
 }
